styles/pages/Details.module.scss
@import "../../theme/theme";

.details_container { 
    display: flex; 
    flex-wrap: wrap; 
    min-height: calc(100vh - 100px); 
    width: 100%; 
}
    @media (max-width: 800px) {
        .details_container_left { height: 40vh; }
        .details_container_right { height: 60vh !important; overflow-y: scroll; }
    }
    .details_container_left { 
        flex: 1 1 60%; 
        justify-content: center; 
        align-items: center; 
    }
        .details_image_container { 
            width: 100%; 
            height: 100%; 
            position: relative; 
        }
            .details_image { 
                width: 100%; 
                height: 100%; 
                position: relative; 
            }
    .details_container_right { 
        flex: 1 1 40%; 
        min-width: 30ch; 
        background-color: $light; 
        font-family: 'Lato', sans-serif; 
    }
        .title_container { 
            display: inline-block; 
            width: 100%; 
            height: 70px;
            background-color: $primary;  
        }
            .title_inner_container { 
                display: flex; 
                flex-direction: row; 
                justify-content: center; 
                height: 100%;
                padding: 0px; 
            }
                .title_arrow { 
                    fill: $light !important;
                    height: 100% !important;
                    width: 48px !important;
                    padding: 0px 5px !important;
                }
                .title_arrow:hover { 
                    background-color: $light !important;
                    fill: $secondary !important;
                }
                .title { 
                    width: calc(100% - 80px); 
                    margin: auto; 
                    color: $light;
                    font-size: 1.5em; 
                    line-height: 1.5em; 
                    text-align: center; 
                    font-family: 'Alegreya Sans SC', sans-serif; 
                }
        .details_form_container { 
            display: flex;
            flex-direction: column;
            width: 100%; 
            height: max-content !important; 
            margin-bottom: 100px;  
        }
            .details_description_container { 
                padding: 15px 20px 0px 20px; 
                width: 100%;
                margin-bottom: 20px;
            }
                .details_description { 
                    width: 100%; 
                    height: max-content;
                    margin: 0; 
                    justify-content: left; 
                    white-space: pre-wrap; 
                    color: $secondary; 
                    font-size: 1.2em; 
                    line-height: 1.4em; 
                }
        .details_navigation_container { 
            width: 100%; 
            height: fit-content; 
            line-height: 3rem; 
            font-size: 1.25rem; 
            padding-top: 15px; 
            padding-left: 15px; 
        }
            .details_navigation_inner_container { 
                display: flex; 
                flex-direction: row; 
            }
                .buy_now_button {
                    height: 3rem;
                    border-radius: 5px; 
                    margin-right: 10px;
                    background-color: $primary; 
                    border: 1px solid $secondary; 
                    color: $light; 
                    font-family: 'Lato', sans-serif;
                    font-weight: bold; 
                }  
                .buy_now_button:hover { 
                    background-color: $secondary; 
                    border: 1px solid $secondary; 
                    color: $light; 
                }
                .price_text { 
                    margin-right: 10px; 
                    color: $secondary; 
                }
                .piece_sold { 
                    margin-right: 10px; 
                    color: $error; 
                }
                .piece_nfs  { 
                    margin-right: 10px; 
                    color: $error; 
                }
                .powered_by_stripe_container { 
                    position: relative; 
                    width: 174px; 
                    height: 3rem; 
                }
                .instagram_link_container { 
                    display: flex; 
                    flex-direction: row; 
                    width: fit-content;                
                    color: $light; 
                    background-color: $primary; 
                    border-radius: 5px; 
                }
                .instagram_link_container:hover { 
                    background-color: $secondary; 
                    color: $light; 
                }
                    .instagram_image_container { 
                        height: 3rem; 
                        width: 3rem; 
                        position: relative; 
                    }
                        .instagram_link_image { 
                            padding: 10px !important; 
                        }
                    .instagram_link_label { 
                        font-size: 1.5rem; 
                        line-height: 3rem; 
                        font-weight: bold; 
                        margin-right: 10px; 
                    }


.full_screen_container {
    width: 100%;
    height: calc(100vh - 100px);
    background-color: $dark;
}
    .full_screen_image_container {
        position: relative; 
        width: 100%; 
        height: 100%; 
    }
        .full_screen_image {
            position: relative; 
            width: 100%; 
            height: 100%; 
        }

    .full_screen_close_container {
        flex-direction: row; 
        position: absolute;
        top: calc(100px + 1rem);
        right: 1rem;
        height: 50px;
        width: 50px;
    }
        .full_screen_close_icon {
            fill: $light !important;
            height: 100% !important;
            width: auto !important;
            padding: 0px 5px !important;
            stroke-width: 1px;
            stroke: $primary;
        }
        .full_screen_close_icon:hover { 
            fill: $secondary !important;
            stroke: $light;
            
        }

.img_hor_vert {
    -webkit-transform: scale(-1);
    -ms-transform: scale(-1);
        transform: scale(-1);
}

